# CyberVPN

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitleaks.s1.current-tree.baseline.json  .gitleaks.toml  AGENTS.md  AGENT_TEAM_MULTI_PROFILE_PROMPT.md  AGENT_TEAM_PHASE6_PROMPT.md  AGENT_TEAM_PHASE7_PROMPT.md  AGENT_TEAM_PHASE8_PROMPT.md  CLAUDE.md  CODEOWNERS  E2E_VERIFICATION.md  GEMINI.md  README.md  THIRD_PARTY_LICENSES.md  _apply.sh  _filter.jq  _fix.js  _update.js  _update_subtasks.py  list_tasks_tmp.py  opencode.json  opencode.json.backup-1769661072502  package-lock.json  package.json  run-frontend.sh
apps/desktop-client/src-tauri/: Cargo.toml  tauri.conf.json
backend/: .coverage  .dockerignore  .env.example  AGENTS.md  CLAUDE.md  Dockerfile  alembic.ini  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 20260205_add_mobile_auth_tables.py  20260205_add_otp_codes_table.py  20260205_add_refresh_tokens.py  20260205_initial_admin_users.py  20260210_170000_add_trial_fields_to_admin_users.py  20260210_add_codes_tables.py  20260210_add_codes_wallet_foundation.py  20260210_add_deleted_at_to_admin_users.py  20260210_billing_core.py  20260211_add_fcm_tokens_table.py  20260213_add_audit_logs_table.py  20260330_create_oauth_accounts.py  20260331_minimize_oauth_token_retention.py  20260410_customer_staff_notes.py  20260411_expand_admin_totp_secret.py  20260416_010000_pricing_catalog_standard.py  20260417_phase1_auth_realms.py  20260417_phase1_offers_pricebooks.py  20260417_phase1_partner_workspace.py  20260417_phase1_policy_versions_and_legal_docs.py  20260417_phase1_storefront_core.py  20260418_phase1_risk_foundation.py  20260418_phase2_commissionability_scaffolding.py  20260418_phase2_merchant_billing_foundation.py  20260418_phase2_orders_foundation.py  20260418_phase2_payment_attempts.py  20260418_phase2_quote_checkout_sessions.py  20260418_phase2_refunds_and_disputes.py  20260418_phase3_attribution_touchpoints.py  20260418_phase3_customer_commercial_bindings.py  20260418_phase3_growth_reward_allocations.py  20260418_phase3_order_attribution_results.py  20260418_phase3_renewal_orders.py  20260418_phase4_partner_payout_accounts.py  20260418_phase4_payout_workflow.py  20260418_phase4_settlement_foundation.py  20260418_phase4_statement_lifecycle.py  20260418_phase5_device_credentials_and_delivery_channels.py  20260418_phase5_entitlement_grants.py  20260418_phase5_service_identity_foundation.py  (+37 more)
backend/docs/: API_SECURITY_REQUIREMENTS.md  HKDF_SALT_DESIGN.md  INCIDENT_RESPONSE_RUNBOOK.md  PRD_SECURITY_REMEDIATION.md  SECURITY_AUDIT_REPORT.md  SECURITY_CONFIGURATION.md  SECURITY_VERIFICATION_REPORT.md
backend/docs/api/: openapi.json
backend/migrations/: env.py
backend/report/: api-contract-validation-analysis.md  clean-architecture-analysis-v2.md  clean-architecture-analysis.md  fastapi-best-practices-analysis.md  fastapi-validation-analysis.md  post-implementation-analysis.md
backend/scripts/: bootstrap_first_admin.py  build_phase2_order_reconciliation_pack.py  build_phase3_explainability_replay_pack.py  build_phase4_settlement_reconciliation_pack.py  build_phase5_service_access_replay_pack.py  build_phase7_parity_evidence_pack.py  build_phase7_reporting_marts_pack.py  build_phase8_attribution_shadow_pack.py  build_phase8_settlement_shadow_pack.py  export_openapi.py  generate_secrets.py  print_phase2_order_reconciliation_summary.py  print_phase3_explainability_replay_summary.py  print_phase4_settlement_reconciliation_summary.py  print_phase5_service_access_replay_summary.py  print_phase7_parity_evidence_summary.py  print_phase7_reporting_marts_summary.py  print_phase8_attribution_shadow_summary.py  print_phase8_settlement_shadow_summary.py  seed_pricing_catalog.py
backend/src/: main.py  serve.py  version.py
backend/src/config/: __init__.py  settings.py
backend/src/presentation/: exception_handlers.py
backend/src/shared/: observability.py
backend/tasks/: fastapi-fixes-prd.md
backend/tests/: conftest.py  factories.py  test_di_container.py
backend/tests/contract/: test_access_delivery_openapi_contract.py  test_admin_commercial_pricebook_lifecycle_openapi_contract.py  test_admin_customer_operations_openapi_contract.py  test_attribution_touchpoint_openapi_contract.py  test_customer_commercial_bindings_openapi_contract.py  test_entitlement_grant_openapi_contract.py  test_growth_codes_e2e_conformance_pack.py  test_growth_notification_delivery_conformance_pack.py  test_growth_notification_rollout_assets_contract.py  test_growth_reporting_governance_assets_contract.py  test_growth_reporting_governance_conformance_pack.py  test_growth_reward_allocations_openapi_contract.py  test_merchant_billing_openapi_contract.py  test_order_attribution_result_openapi_contract.py  test_order_explainability_openapi_contract.py  test_order_openapi_contract.py  test_partner_admin_e2e_conformance_pack.py  test_partner_application_onboarding_openapi_contract.py  test_partner_finance_portal_openapi_contract.py  test_partner_integrations_openapi_contract.py  test_partner_observability_assets_contract.py  test_partner_payout_accounts_openapi_contract.py  test_partner_platform_api_conventions.py  test_partner_platform_event_taxonomy.py  test_partner_platform_metric_dictionary.py  test_partner_platform_phase0_gate.py  test_partner_session_bootstrap_openapi_contract.py  test_partner_statement_openapi_contract.py  (+40 more)
crewai_orchestrator/: .env.example  pyproject.toml
crewai_orchestrator/src/: __main__.py  main.py
services/helix-adapter/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md
services/helix-node/: .env.example  Cargo.toml  Dockerfile  README.md
services/node-fleet-controller/: .env.example  README.md  node_fleet_controller.db  pyproject.toml
services/task-worker/: .dockerignore  .env.example  AGENTS.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_COMPLETION.md  IMPLEMENTATION_SUMMARY.md  README.md  healthcheck.py  pyproject.toml
services/telegram-bot/: .dockerignore  .env.example  Dockerfile  README.md  healthcheck.py  pyproject.toml
(+6788 files in other folders)
