[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cybervpn-backend"
version = "0.1.0"
description = "CyberVPN Backend API"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0,<1.0.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.6.0,<3.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.23,<3.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "httpx>=0.25.0",
    "redis>=5.0.0",
    "PyJWT[crypto]>=2.8.0",
    "argon2-cffi>=23.1.0",
    "pyotp>=2.9.0",
    "taskiq>=0.11.0",
    "taskiq-redis>=1.0.0",
    "structlog>=24.0.0",
    # SEC: CVE-2026-0994 - protobuf vulnerability fix
    "protobuf>=6.33.5",
    # Metrics and monitoring
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "factory-boy",
    "respx",
    "httpx",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src"]
omit = ["src/infrastructure/database/migrations/*"]

[tool.coverage.report]
fail_under = 60
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]

[tool.coverage.html]
directory = "htmlcov"
