[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cybervpn-backend"
version = "0.1.0"
description = "CyberVPN Backend API"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0,<1.0.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.6.0,<3.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.23,<3.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "httpx>=0.25.0",
    "redis>=5.0.0",
    "PyJWT[crypto]>=2.8.0",
    "argon2-cffi>=23.1.0",
    "pyotp>=2.9.0",
    "taskiq>=0.11.0",
    "taskiq-redis>=1.0.0",
    "structlog>=24.0.0",
    # SEC: CVE-2026-0994 - protobuf vulnerability fix
    "protobuf>=6.33.5",
    # Metrics and monitoring
    "prometheus-client>=0.20.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "sentry-sdk[fastapi]>=2.0.0",
    # OpenTelemetry tracing
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.41b0",
    "opentelemetry-instrumentation-httpx>=0.41b0",
    "opentelemetry-instrumentation-redis>=0.41b0",
    "opentelemetry-exporter-otlp>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "factory-boy",
    "respx",
    "httpx",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "ASYNC"]
ignore = [
    "B008",   # function-call-in-default-argument — FastAPI Depends() pattern
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "S107"]  # Allow assert + hardcoded test values
"src/config/**" = ["S104"]                       # Allow 0.0.0.0 bind in settings
"alembic/env.py" = ["E402"]
"migrations/env.py" = ["E402"]
"src/infrastructure/database/migrations/**" = ["E402"]
"src/infrastructure/oauth/*.py" = ["S105"]       # OAuth URLs contain TOKEN_URL constants
"src/application/dto/mobile_auth.py" = ["S105", "S106"]
"src/application/use_cases/auth/oauth_login.py" = ["S106"]
"src/application/use_cases/auth/telegram_bot_link.py" = ["S106"]
"src/application/use_cases/auth/telegram_miniapp.py" = ["S106"]
"src/application/use_cases/auth/verify_otp.py" = ["S106", "S107", "S110"]
"src/application/use_cases/mobile_auth/login.py" = ["S106"]
"src/application/use_cases/mobile_auth/logout.py" = ["B904"]
"src/application/use_cases/mobile_auth/refresh.py" = ["B904", "S106"]
"src/application/use_cases/mobile_auth/register.py" = ["S106"]
"src/application/use_cases/mobile_auth/telegram_auth.py" = ["S106"]
"src/application/use_cases/users/bulk_operations.py" = ["S112"]
"src/application/services/oauth_state_service.py" = ["S101"]
"src/main.py" = ["S110"]
"src/presentation/api/v1/auth/routes.py" = ["E402", "B904", "S106"]
"src/presentation/api/v1/auth/schemas.py" = ["S105"]
"src/presentation/api/v1/mobile_auth/routes.py" = ["B904"]
"src/presentation/api/v1/oauth/routes.py" = ["B904"]
"src/presentation/api/v1/oauth/schemas.py" = ["S105"]
"src/presentation/api/v1/two_factor/routes.py" = ["B904"]
"src/presentation/api/v1/users/actions.py" = ["B904"]
"src/presentation/api/v1/users/bulk.py" = ["B904"]
"src/presentation/api/shared/schemas.py" = ["UP046"]
"src/presentation/dependencies/auth.py" = ["B904"]
"src/presentation/middleware/auth.py" = ["S110"]
"src/serve.py" = ["S104"]
"src/domain/repositories/base.py" = ["UP046"]
"src/infrastructure/health/checks.py" = ["ASYNC109"]
"tests/unit/test_remnawave_responses.py" = ["S104"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src"]
omit = ["src/infrastructure/database/migrations/*"]

[tool.coverage.report]
fail_under = 60
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]

[tool.coverage.html]
directory = "htmlcov"
