[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cybervpn-node-fleet-controller"
version = "0.1.0"
description = "CyberVPN Node Fleet Controller service foundation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135,<1.0",
    "sentry-sdk[fastapi]>=2.54.0",
    "uvicorn[standard]>=0.44",
    "pydantic>=2.12,<3.0",
    "pydantic-settings>=2.13,<3.0",
    "sqlalchemy[asyncio]>=2.0.23,<3.0.0",
    "aiosqlite>=0.20",
    "structlog>=25.0",
    "nats-py>=2.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4",
    "pytest-asyncio>=1.0",
    "httpx>=0.28",
    "ruff>=0.15",
]
test = [
    "pytest>=8.4",
    "pytest-asyncio>=1.0",
    "httpx>=0.28",
]

[project.scripts]
cybervpn-node-fleet-controller = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "ASYNC"]
ignore = ["B008", "S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
