[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cybervpn-task-worker"
version = "0.1.0"
description = "CyberVPN TaskIQ-based background task worker microservice"
requires-python = ">=3.13"
dependencies = [
    "taskiq>=0.12.1",
    "taskiq-redis>=1.2.1",
    "taskiq-fastapi>=0.4.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "psycopg>=3.2",
    "httpx>=0.28",
    "redis[hiredis]>=5.2",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "structlog>=24.4",
    "prometheus-client>=0.21",
    "sentry-sdk>=2.0.0",
    "tenacity>=9.0",
    "orjson>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "aiosqlite>=0.20",
    "fakeredis[json]>=2.26",
    "respx>=0.22",
    "freezegun>=1.4",
    "ruff>=0.8",
    "mypy>=1.13",
    "coverage>=7.6",
    "factory-boy>=3.3",
]
test = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "aiosqlite>=0.20",
    "fakeredis[json]>=2.26",
    "respx>=0.22",
    "freezegun>=1.4",
    "factory-boy>=3.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "S",     # flake8-bandit
    "T20",   # flake8-print
    "SIM",   # flake8-simplify
    "ASYNC", # flake8-async
    "RUF",   # ruff-specific
]
ignore = [
    "S101",  # assert allowed in tests
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = ["src/schedules/*", "tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
]
