[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cybervpn-telegram-bot"
version = "1.0.0"
description = "CyberVPN Telegram Bot Service — aiogram 3 microservice for VPN subscription management"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = [{ name = "CyberVPN Team" }]
keywords = ["telegram", "bot", "vpn", "aiogram", "cybervpn"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Typing :: Typed",
]
dependencies = [
    "aiogram>=3.25,<4.0",
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.12",
    "httpx>=0.28.1",
    "redis[hiredis]>=7.1",
    "structlog>=25.5",
    "qrcode[pil]>=8.0",
    "fluent.runtime>=0.4",
    "prometheus-client>=0.24.1",
    "orjson>=3.10",
    "tenacity>=9.0",
    "aiofiles>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "pytest-cov>=7.0",
    "respx>=0.22",
    "fakeredis[json]>=2.33",
    "factory-boy>=3.3",
    "ruff>=0.14",
    "mypy>=1.19",
    "coverage>=7.6",
    "freezegun>=1.4",
    "pre-commit>=4.0",
]
test = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "pytest-cov>=7.0",
    "respx>=0.22",
    "fakeredis[json]>=2.33",
    "factory-boy>=3.3",
    "freezegun>=1.4",
]

[project.scripts]
cybervpn-bot = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ── Ruff ─────────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "S",     # flake8-bandit
    "T20",   # flake8-print
    "SIM",   # flake8-simplify
    "ASYNC", # flake8-async
    "C4",    # flake8-comprehensions
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific
    "PT",    # flake8-pytest-style
    "DTZ",   # flake8-datetimez
    "PIE",   # flake8-pie
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "FLY",   # flynt (f-string conversion)
    "PERF",  # perflint
]
ignore = [
    "S101",   # assert allowed in tests
    "B008",   # function call in default arg (Depends)
    "RUF012", # mutable class attrs (pydantic models)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106", "S105"]

# ── Pytest ───────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests (require running services)",
    "e2e: end-to-end tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ── Coverage ─────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "src/__main__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
    "@overload",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

# ── Mypy ─────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
show_column_numbers = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "fluent.*",
    "qrcode.*",
    "aiofiles.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
