[package]
name = "desktop-client"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_client_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "unstable", "image"] }
tauri-plugin-opener = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
reqwest = { version = "0.13.2", features = ["stream", "rustls"] }
flate2 = "1.1.9"
tar = "0.4.44"
zip = "8.2.0"
tokio = { version = "1.50.0", features = ["macros", "process", "rt-multi-thread"] }
thiserror = "2.0.18"
url = "2.5.8"
base64 = "0.22.1"
urlencoding = "2.1.3"
uuid = { version = "1.22.0", features = ["v4"] }
lazy_static = "1.5.0"
regex = "1.12.3"
libc = "0.2.183"
windows = { version = "0.58.0", features = ["Win32_Security", "Win32_Foundation", "Win32_System_Threading", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_System_Registry"] }
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-deep-link = "2.4.7"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"
xcap = "0.0.12"
rxing = { version = "0.8.5", features = ["image"] }
futures = "0.3"
image = "0.25.8"
sysproxy = "0.3.0"
tauri-plugin-autostart = "2.5.1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true

